# qwirkle

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  Makefile  PLAN.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
go/: Dockerfile  README.md  go.mod
go/ai/: movegen.go  solver.go
go/api/: server.go
go/cmd/: main.go
go/engine/: bag.go  board.go  game.go  hand.go  rules.go  tile.go
go/simulator/: runner.go
plans/: neuroevolution-ai.md  real-time-interface.md
src/: __init__.py
src/ai/: __init__.py  move_gen.py  solver.py
src/engine/: __init__.py  game.py  rules.py  scoring.py
src/models/: __init__.py  bag.py  board.py  hand.py  tile.py
src/sim/: __init__.py  recorder.py  runner.py  stats.py  win_prob.py
src/ui/: __init__.py  game_loop.py  input.py  terminal.py
src/web/: __init__.py  api.py  models.py  session.py
src/web/frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
src/web/frontend/src/: App.tsx  index.css
src/web/frontend/src/api/: gameApi.ts
src/web/frontend/src/components/: Board.tsx  GameControls.tsx  Hand.tsx  MiniMap.tsx  ScoreBoard.tsx  Sidebar.tsx  Tile.tsx
src/web/frontend/src/hooks/: useGame.ts
src/web/frontend/src/types/: game.ts
src/web/frontend/src/utils/: scoring.ts
tests/: test_ai.py  test_bag.py  test_board.py  test_game.py  test_hand.py  test_input.py  test_rules.py  test_scoring.py  test_sim.py  test_tile.py
training/: requirements.txt  train.py
